Comment on init bw img

--- a/canny.ipynb
+++ b/canny.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -117,8 +117,8 @@
     "raw_img = cv2.imread('imgs/lena_color.jpg')\n",
     "raw_img = cv2.cvtColor(raw_img, cv2.COLOR_BGR2RGB)\n",
     "raw_bw_img = cv2.cvtColor(raw_img, cv2.COLOR_RGB2GRAY)\n",
-    "bw_img = cv2.cvtColor(raw_img, cv2.COLOR_RGB2GRAY)\n",
-    "bw_img = bw_img.astype(np.float32)\n",
+    "# Normalize to 0..1\n",
+    "bw_img = raw_bw_img.astype(np.float32)\n",
     "bw_img /= 255.\n",
     "\n",
     "show_subplot({\"Color\": raw_img, \"Grayscale\": bw_img})"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
