--- a/canny-gpu.ipynb
+++ b/canny-gpu.ipynb
@@ -197,6 +197,7 @@
     "cuda_img_thinned      = cuda.device_array(cuda_img_input.shape, np.float32)\n",
     "cuda_img_thresh_upper = cuda.device_array(cuda_img_input.shape, np.float32)\n",
     "cuda_img_thresh_lower = cuda.device_array(cuda_img_input.shape, np.float32)\n",
+    "cuda_img_ccl          = cuda.device_array(cuda_img_input.shape, np.uint32)\n",
     "cuda_img_hysteresis   = cuda.device_array(cuda_img_input.shape, np.float32)"
    ]
   },
@@ -434,7 +435,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function for generating connected component labels"
+    "Function for thresholding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@cuda.jit\n",
+    "def threshold(cuda_img_in: cuda.np.ndarray, cuda_img_shape: cuda.np.ndarray, thresh: float, cuda_img_out: cuda.np.ndarray) -> None:\n",
+    "    imgW = cuda_img_shape[1]\n",
+    "    img_row = cuda.blockIdx.y\n",
+    "    img_col = (cuda.blockIdx.x * cuda.blockDim.x) + cuda.threadIdx.x\n",
+    "    img_idx = img_row * imgW + img_col\n",
+    "    curr_px = cuda_img_in[img_idx]\n",
+    "\n",
+    "    cuda_img_out[img_idx] = int(curr_px >= thresh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functions for generating connected component labels"
    ]
   },
   {
@@ -443,9 +468,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
-    "#@cuda.jit\n",
-    "#def ccl(cuda_img_in: cuda.np.ndarray, cuda_img_out: cuda.np.ndarray) -> None:"
+    "@cuda.jit\n",
+    "def ccl_init(cuda_img_binary: cuda.np.ndarray, cuda_img_shape: cuda.np.ndarray, cuda_label_img: cuda.np.ndarray) -> None:\n",
+    "    imgW = cuda_img_shape[1]\n",
+    "    img_row = cuda.blockIdx.y\n",
+    "    img_col = (cuda.blockIdx.x * cuda.blockDim.x) + cuda.threadIdx.x\n",
+    "    img_idx = img_row * imgW + img_col\n",
+    "    cuda_label_img[img_idx] = img_idx * cuda_img_binary[img_idx]\n",
+    "\n",
+    "@cuda.jit\n",
+    "def ccl_scan(cuda_label_img: cuda.np.ndarray, cuda_img_shape: cuda.np.ndarray, change_flag: cuda.np.ndarray) -> None:\n",
+    "    imgH = cuda_img_shape[0]\n",
+    "    imgW = cuda_img_shape[1]\n",
+    "    img_row = cuda.blockIdx.y\n",
+    "    img_col = (cuda.blockIdx.x * cuda.blockDim.x) + cuda.threadIdx.x\n",
+    "    img_idx = img_row * imgW + img_col\n",
+    "    min_label = cuda_label_img[img_idx]\n",
+    "\n",
+    "    if (min_label == 0):\n",
+    "        return\n",
+    "    \n",
+    "    for r in range(-1,2):\n",
+    "        if (imgH < img_row + r < 0):\n",
+    "            continue\n",
+    "        for c in range(-1,2):\n",
+    "            if (imgW < img_col + c < 0):\n",
+    "                continue\n",
+    "\n",
+    "            neighbor_label = cuda_label_img[(img_row+r) * imgW + (img_col+c)]\n",
+    "            if (neighbor_label != 0 and neighbor_label < min_label):\n",
+    "                min_label = neighbor_label\n",
+    "                change_flag[0] = True\n",
+    "    \n",
+    "    cuda_label_img[img_idx] = min_label\n",
+    "\n",
+    "@cuda.jit\n",
+    "def ccl_analyze(cuda_label_img: cuda.np.ndarray, cuda_img_shape: cuda.np.ndarray) -> None:\n",
+    "    imgW = cuda_img_shape[1]\n",
+    "    img_row = cuda.blockIdx.y\n",
+    "    img_col = (cuda.blockIdx.x * cuda.blockDim.x) + cuda.threadIdx.x\n",
+    "    img_idx = img_row * imgW + img_col\n",
+    "\n",
+    "    curr_label = cuda_label_img[img_idx]\n",
+    "    new_label = cuda_label_img[curr_label]\n",
+    "\n",
+    "    if (curr_label != 0):\n",
+    "        while (curr_label != new_label):\n",
+    "            curr_label = new_label\n",
+    "            new_label = min(new_label, cuda_label_img[curr_label])\n",
+    "        cuda_label_img[img_idx] = curr_label\n",
+    "\n",
+    "def ccl(cuda_img_in: cuda.np.ndarray, cuda_label_img: cuda.np.ndarray) -> None:\n",
+    "    ccl_init[gridDim, blockDim](cuda_img_in, cuda_img_shape, cuda_label_img)\n",
+    "\n",
+    "    h_any_changes = True\n",
+    "\n",
+    "    while (h_any_changes):\n",
+    "        d_any_changes = cuda.to_device([False])\n",
+    "        ccl_scan[gridDim, blockDim](cuda_label_img, cuda_img_shape, d_any_changes)\n",
+    "        ccl_analyze[gridDim, blockDim](cuda_label_img, cuda_img_shape)\n",
+    "        h_any_changes = d_any_changes.copy_to_host()[0]\n"
    ]
   },
   {
@@ -479,10 +561,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
-    "# 1. Get upper and lower thresholds\n",
-    "# 2. Get CCL of lower image for expansion in hysteresis\n",
-    "# 3. Get the union mask of both threholds\n",
+    "threshold[gridDim, blockDim](cuda_img_thinned, cuda_img_shape, 0.7, cuda_img_thresh_upper)\n",
+    "threshold[gridDim, blockDim](cuda_img_thinned, cuda_img_shape, 0.4, cuda_img_thresh_lower)\n",
+    "ccl(cuda_img_thresh_lower, cuda_img_ccl)\n",
+    "\n",
+    "# TODO : Run hysteresis of upper thresh and lower_thresh's CCLs\n",
     "\n",
     "# TODO: For display\n",
     "# Make hysteresis image 3 channel to show what was added from the lower thresh image\n",
